k8s/_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: $NAMESPACE
  labels:
    name: $NAMESPACE
  annotations:
    example.com/test: "true"
