k8s/chat.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: trading
    service: chat
  name: chat
  namespace: $NAMESPACE
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trading
      service: chat
  template:
    metadata:
      labels:
        app: trading
        service: chat
      annotations:
        io.opentelemetry.discovery.logs/enabled: "true"
        instrumentation.opentelemetry.io/inject-sdk: "opentelemetry-operator-system/elastic-instrumentation"
    spec:
      containers:
        - name: chat
          image: $REPO/chat:$COURSE
          imagePullPolicy: Always
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: trading
    service: chat
  name: chat
  namespace: $NAMESPACE
spec:
  ports:
    - name: chat
      port: 8000
      targetPort: 8000
  selector:
    app: trading
    service: chat
---
