k8s/elb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: trading
    service: elb
  name: elb
  namespace: $NAMESPACE
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trading
      service: elb
  template:
    metadata:
      labels:
        app: trading
        service: elb
      annotations:
        io.opentelemetry.discovery.logs/enabled: "false"
    spec:
      containers:
        - name: elb
          volumeMounts:
            - name: config-volume
              mountPath: /usr/src/app/config.yaml
              subPath: config.yaml
          image: $REPO/elb:$COURSE
          imagePullPolicy: Always
      volumes:
        - name: config-volume
          configMap:
            name: elb-config
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: trading
    service: elb
  name: elb
  namespace: $NAMESPACE
spec:
  ports:
    - name: elb
      port: 9001
      targetPort: 9001
      protocol: TCP
  selector:
    app: trading
    service: elb
---
