k8s/monkey.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monkey
  namespace: $NAMESPACE
  labels:
    app: trading
    service: monkey
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trading
      service: monkey
  template:
    metadata:
      annotations:
        example.com/org: "trading_ops"

        instrumentation.opentelemetry.io/inject-python: "opentelemetry-operator-system/elastic-instrumentation"
        io.opentelemetry.discovery.logs/enabled: "true"
        io.opentelemetry.discovery.logs/config: |
          operators:
            - id: container-parser # Extract container's metadata
              type: container
            - id: es_index
              type: add
              field: attributes["elasticsearch.index"]
              value: logs.otel
        resource.opentelemetry.io/service.version: "$SERVICE_VERSION"
      labels:
        app: trading
        service: monkey
        app.kubernetes.io/version: "$SERVICE_VERSION"
    spec:
      containers:
        - name: monkey
          image: $REPO/monkey:$COURSE
          imagePullPolicy: Always
          ports:
            - containerPort: 9002
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: trading
    service: monkey
  name: monkey
  namespace: $NAMESPACE
spec:
  ports:
    - name: monkey
      port: 9002
      targetPort: 9002
  selector:
    app: trading
    service: monkey
---
