k8s/notifier.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: trading
    service: notifier
  name: notifier
  namespace: $NAMESPACE
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trading
      service: notifier
  template:
    metadata:
      annotations:
        example.com/org: "it_ops"

        instrumentation.opentelemetry.io/inject-dotnet: "opentelemetry-operator-system/elastic-instrumentation"
        #instrumentation.opentelemetry.io/inject-sdk: "opentelemetry-operator-system/elastic-instrumentation"
        io.opentelemetry.discovery.logs/enabled: "false"
        resource.opentelemetry.io/service.version: "$SERVICE_VERSION"
      labels:
        app: trading
        service: notifier
        app.kubernetes.io/version: "$SERVICE_VERSION"
    spec:
      containers:
        - name: notifier
          image: $REPO/notifier:$COURSE
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: trading
    service: notifier
  name: notifier
  namespace: $NAMESPACE
spec:
  ports:
    - name: notifier
      port: 5000
      targetPort: 5000
  selector:
    app: trading
    service: notifier
---
