k8s/recorder-go-zero.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: trading
    service: recorder-go-zero
  name: recorder-go-zero
  namespace: $NAMESPACE
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trading
      service: recorder-go-zero
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-go: "opentelemetry-operator-system/elastic-instrumentation"
        instrumentation.opentelemetry.io/otel-go-auto-target-exe: "/recorder-zero"
        io.opentelemetry.discovery.logs/enabled: "true"
        resource.opentelemetry.io/service.version: "$SERVICE_VERSION"
        example.com/org: "db_ops"
      labels:
        app: trading
        service: recorder-go-zero
        app.kubernetes.io/version: "$SERVICE_VERSION"
    spec:
      containers:
        - env:
            - name: POSTGRESQL_HOST
              value: $POSTGRESQL_HOST
            - name: POSTGRESQL_PASSWORD
              value: $POSTGRESQL_PASSWORD
            - name: POSTGRESQL_USER
              value: $POSTGRESQL_USER
            - name: POSTGRESQL_DBNAME
              value: $POSTGRESQL_DBNAME
            - name: POSTGRESQL_PROTOCOL
              value: $POSTGRESQL_PROTOCOL
            - name: POSTGRESQL_SETUP
              value: $POSTGRESQL_SETUP
            - name: POSTGRESQL_OPTIONS
              value: $POSTGRESQL_OPTIONS
            - name: POSTGRESQL_PORT
              value: "$POSTGRESQL_PORT"
            - name: POSTGRESQL_DIALECT
              value: $POSTGRESQL_DIALECT
            - name: NOTIFIER_ENDPOINT
              value: "http://notifier:5000/notify"
          image: $REPO/recorder-go-zero:$COURSE
          imagePullPolicy: Always
          name: recorder-go-zero
          ports:
            - containerPort: 9003
          securityContext:
            runAsUser: 0
            privileged: true
            capabilities:
              add:
              - SYS_PTRACE
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: trading
    service: recorder-go-zero
  name: recorder-go-zero
  namespace: $NAMESPACE
spec:
  ports:
    - name: recorder-go-zero
      port: 9003
      targetPort: 9003
  selector:
    app: trading
    service: recorder-go-zero
---
