k8s/recorder-go.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: trading
    service: recorder-go
  name: recorder-go
  namespace: $NAMESPACE
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trading
      service: recorder-go
  template:
    metadata:
      annotations:
        io.opentelemetry.discovery.logs/enabled: "true"
        instrumentation.opentelemetry.io/inject-sdk: "opentelemetry-operator-system/elastic-instrumentation"
        resource.opentelemetry.io/service.version: "$SERVICE_VERSION"
        example.com/org: "db_ops"

        io.opentelemetry.discovery.logs/config: |
          operators:
          - type: container
          - type: json_parser
            on_error: send_quiet
            parse_from: body
            timestamp:
              parse_from: attributes.timestamp
              on_error: send_quiet
              layout_type: strptime
              layout: '%Y-%m-%d %H:%M:%S.%L %Z'
            trace:
              trace_id:
                parse_from: attributes.trace_id
                on_error: send_quiet
              span_id:
                parse_from: attributes.span_id
                on_error: send_quiet
              trace_flags:
                parse_from: attributes.trace_flags
                on_error: send_quiet
            severity:
              parse_from: attributes.level
              on_error: send_quiet
              mapping:
                warn: 
                  - WARNING
                  - NOTICE
                error:
                  - ERROR
                info: 
                  - LOG
                  - INFO
                  - STATEMENT
                debug1:
                  - DEBUG1
                debug2:
                  - DEBUG2
                debug3:
                  - DEBUG3
                debug4:
                  - DEBUG4
                debug5:
                  - DEBUG5
                fatal:
                  - FATAL
                  - PANIC
          - type: move
            on_error: send_quiet
            from: attributes.message
            to: body
          - type: remove
            on_error: send_quiet
            field: attributes.timestamp
          - type: remove
            on_error: send_quiet
            field: attributes.level
          - type: remove
            on_error: send_quiet
            field: attributes.trace_id
          - type: remove
            on_error: send_quiet
            field: attributes.span_id
          - type: remove
            on_error: send_quiet
            field: attributes.trace_flags

      labels:
        app: trading
        service: recorder-go
        app.kubernetes.io/version: "$SERVICE_VERSION"
    spec:
      containers:
        - env:
            - name: MYSQL_HOST
              value: $MYSQL_HOST
            - name: MYSQL_PASSWORD
              value: $MYSQL_PASSWORD
            - name: MYSQL_USER
              value: $MYSQL_USER
            - name: MYSQL_PORT
              value: "$MYSQL_PORT"
            - name: NOTIFIER_ENDPOINT
              value: "http://notifier:5000/notify"
          image: $REPO/recorder-go:$COURSE
          imagePullPolicy: Always
          name: recorder-go
          ports:
            - containerPort: 9003
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: trading
    service: recorder-go
  name: recorder-go
  namespace: $NAMESPACE
spec:
  ports:
    - name: recorder-go
      port: 9003
      targetPort: 9003
  selector:
    app: trading
    service: recorder-go
---
