k8s/recorder-java.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: trading
    service: recorder-java
  name: recorder-java
  namespace: $NAMESPACE
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trading
      service: recorder-java
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-java: "opentelemetry-operator-system/elastic-instrumentation"
        io.opentelemetry.discovery.logs/enabled: "false"
        resource.opentelemetry.io/service.version: "$SERVICE_VERSION"
        resource.opentelemetry.io/tail_sampling: "true"
        example.com/org: "db_ops"
      labels:
        app: trading
        service: recorder-java
        app.kubernetes.io/version: "$SERVICE_VERSION"
    spec:
      volumes:
        - name: lib
          emptyDir: {}
      containers:
        - name: recorder-java
          volumeMounts:
            - name: lib
              mountPath: /usr/src/app/lib
          image: $REPO/recorder-java:$COURSE
          imagePullPolicy: Always
          ports:
            - containerPort: 9003
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: trading
    service: recorder-java
  name: recorder-java
  namespace: $NAMESPACE
spec:
  ports:
    - name: recorder-java
      port: 9003
      targetPort: 9003
  selector:
    app: trading
    service: recorder-java
---
