k8s/router.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: trading
    service: router
  name: router
  namespace: $NAMESPACE
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trading
      service: router
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-nodejs: "opentelemetry-operator-system/elastic-instrumentation"
        io.opentelemetry.discovery.logs/enabled: "true"
        resource.opentelemetry.io/log-format: "json"
        resource.opentelemetry.io/service.version: "$SERVICE_VERSION"
        example.com/org: "it_ops"
      labels:
        app: trading
        service: router
        app.kubernetes.io/version: "$SERVICE_VERSION"
    spec:
      containers:
        - name: router
          image: $REPO/router:$COURSE
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: trading
    service: router
  name: router
  namespace: $NAMESPACE
spec:
  ports:
    - name: router
      port: 9000
      targetPort: 9000
  selector:
    app: trading
    service: router
